# CheongCheong_Chating

./: README.md  README_SUBMIT.md  test.json
application/: README.md  application_python_init.sh  korea_regions.json  pyproject.toml  start.sh  user_data.sh
application/src/housing_alert/: config.py  streamlit_app.py
application/src/housing_alert/pages/: notification.py  page1.py  page2.py  qa_page.py  register_page.py
application/src/housing_alert/services/: ai.py  db.py  storage.py
data_collect/: 서울특별시_하천이용시설 현황_20240906.csv
lambda/notification/: main.py
lambda/pdf_processor/: main.py
src/housing_alert/: streamlit_app.py
src/housing_alert/services/: ai.py  db.py
terraform/application/: data.tf  locals.tf  main.tf  main_ddb.tf  terraform.tfstate
terraform/backing/: locals.tf  main.tf  outputs.tf
terraform/common/: locals.tf  main.tf  outputs.tf
terraform/notification/: data.tf  locals.tf  main.tf  main_ddb.tf  main_iam.tf  main_lambda.tf  terraform.tfstate  terraform.tfstate.backup
terraform/notification/functions/pdf_processor/src/: lambda_function.py
terraform/notification/lambda/: lambda_function.py
